# terasistemas

./: .gitignore  Dockerfile  planilha.csv  pyproject.toml
app/: settings.py  storage_backends.py  urls.py
app/core/: models.py
app/core/migrations/: 0001_initial.py
app/process/: admin.py  models.py  urls.py  views.py
app/process/management/commands/: import.py
app/process/migrations/: 0001_initial.py  0002_delete_status_alter_process_date.py
app/process/templates/: home.html
